--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -1,3 +1,9 @@
 <resources>
     <string name="app_name">Messenger</string>
+    <string name="nickname_hint">Enter your nickname</string>
+    <string name="password_hint">Enter your password</string>
+    <string name="what_i_do_hint">What I do</string>
+    <string name="sign_in">SIGN IN</string>
+    <string name="sign_up">SIGN UP</string>
+    <string name="not_registered">Not registered?</string>
 </resources>
