--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -5,6 +5,8 @@
     <string name="what_i_do_hint">What I do</string>
     <string name="sign_in">SIGN IN</string>
     <string name="sign_up">SIGN UP</string>
+    <string name="update">UPDATE</string>
+    <string name="sign_out">SIGN OUT</string>
     <string name="not_registered">Not registered?</string>
     <string name="home">home</string>
     <string name="settings">settings</string>
