--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -12,4 +12,5 @@
     <string name="settings">settings</string>
     <string name="fab_description">FAB</string>
     <string name="blank"></string>
+    <string name="wait">Please wait…</string>
 </resources>
