--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -13,4 +13,5 @@
     <string name="fab_description">FAB</string>
     <string name="blank"></string>
     <string name="wait">Please wait…</string>
+    <string name="message_hint">Message</string>
 </resources>
