--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -20,4 +20,5 @@
     <string name="temp_job_text">temp job</string>
     <string name="empty_nick">empty_nick</string>
     <string name="empty_job">empty_job</string>
+    <string name="temp_string_for_last_message">hi, how is life, asdasdasxxasdasdasdasdasdasdasdasdasasdasdasdasdasdasdasdasdasdasdasdasda</string>
 </resources>
